[gd_scene load_steps=10 format=2]

[ext_resource path="res://UITwo/Inventory/Assets/itemDescriptionTexture.png" type="Texture" id=1]
[ext_resource path="res://UITwo/Inventory/Assets/inventoryFrame.png" type="Texture" id=2]
[ext_resource path="res://GlobalAssets/ChiKareGo2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UITwo/Inventory/Assets/formDisplayTexture.png" type="Texture" id=4]
[ext_resource path="res://UITwo/Inventory/Code/InvSlot.tscn" type="PackedScene" id=6]
[ext_resource path="res://UITwo/Inventory/Code/Inventory.gd" type="Script" id=7]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 150, 70 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 150, 70 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="Inventory" type="Control"]
anchor_right = 0.156
anchor_bottom = 0.4
margin_left = 1.18461
margin_top = 0.481191
margin_right = 94.3126
margin_bottom = 129.481
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="InventoryBG" type="TextureRect" parent="."]
margin_right = 170.0
margin_bottom = 248.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 163.0
margin_bottom = 241.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="FormDisplay" type="Panel" parent="VBoxContainer"]
margin_right = 156.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
custom_styles/panel = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/FormDisplay"]
anchor_left = 0.047
anchor_top = 0.044
anchor_right = 0.047
anchor_bottom = 0.044
margin_left = 5.42
margin_top = -1.08
margin_right = 135.42
margin_bottom = 62.92
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FormImage" type="TextureRect" parent="VBoxContainer/FormDisplay/CenterContainer"]
margin_left = 33.0
margin_right = 97.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
expand = true

[node name="DescriptionPanel" type="Panel" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 156.0
margin_bottom = 114.0
rect_min_size = Vector2( 70, 40 )
custom_styles/panel = SubResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/DescriptionPanel"]
margin_left = 6.0
margin_top = 2.0
margin_right = 153.0
margin_bottom = 35.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.937255, 0.878431, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Default Text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventorySlotContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 156.0
margin_bottom = 234.0
mouse_filter = 2
columns = 4

[node name="InvSlot" parent="VBoxContainer/InventorySlotContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 36.0
margin_bottom = 36.0

[node name="InvSlot2" parent="VBoxContainer/InventorySlotContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 0.0
margin_right = 76.0
margin_bottom = 36.0

[node name="InvSlot3" parent="VBoxContainer/InventorySlotContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 0.0
margin_right = 116.0
margin_bottom = 36.0

[node name="InvSlot4" parent="VBoxContainer/InventorySlotContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 0.0
margin_right = 156.0
margin_bottom = 36.0

[node name="InvSlot5" parent="VBoxContainer/InventorySlotContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 40.0
margin_right = 36.0
margin_bottom = 76.0

[node name="InvSlot6" parent="VBoxContainer/InventorySlotContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 40.0
margin_right = 76.0
margin_bottom = 76.0

[node name="InvSlot7" parent="VBoxContainer/InventorySlotContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 40.0
margin_right = 116.0
margin_bottom = 76.0

[node name="InvSlot8" parent="VBoxContainer/InventorySlotContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 40.0
margin_right = 156.0
margin_bottom = 76.0

[node name="InvSlot9" parent="VBoxContainer/InventorySlotContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 80.0
margin_right = 36.0
margin_bottom = 116.0

[node name="InvSlot10" parent="VBoxContainer/InventorySlotContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 80.0
margin_right = 76.0
margin_bottom = 116.0

[node name="InvSlot11" parent="VBoxContainer/InventorySlotContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 80.0
margin_right = 116.0
margin_bottom = 116.0

[node name="InvSlot12" parent="VBoxContainer/InventorySlotContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 80.0
margin_right = 156.0
margin_bottom = 116.0

[node name="HeldItemIcon" type="Sprite" parent="."]
